improved lan searching
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2643 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,7 +1,7 @@
 newmenu multiplayer
 
-menuitem "Join a server"		"updatefrommaster; showmenu server"
-menuitem "Join a LAN server"	"updatefromlanmasters; showmenu server"
+menuitem "Join a server"		"searchlan 1; showallservers 1; updatefrommaster; showmenu server"
+menuitem "Join a LAN server"	"searchlan 2; showallservers 0; showmenu server"
 menuitem "Disconnect"			"disconnect"
 menuitem "Server voting..."		[ showmenu "Server voting" ]
 menuitem "Chat"				"saycommand"
