update cfg for tocas models
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2645 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -142,6 +142,7 @@ mapmodel 1 1 1 0 "toca/pipes/metalpipe"		// 109
 mapmodel 0 1 0 0 "toca/pipes/metalpipe2"	// 110
 mapmodel 0 0 0 0 "signs/arab"			// 111	Note: This model was made before version 1.0
 mapmodel 1 1 0 0 "toca/milkcrate"		// 112
+mapmodel 0 0 0 0 "toca/ceilingfan"		// 113
 
 
 
@@ -177,7 +178,7 @@ mapmodel 1 1 0 0 "toca/milkcrate"		// 112
 // mapmodel 0 0 0 0 "toca/smallpalm"
 // mapmodel 0 0 0 0 "toca/tree1"
 // mapmodel 0 0 0 0 "toca/tree2"
-
+// mapmodel 1 19 0 0 "toca/pine"			
 
 
 // The skymap for this map. You can change this by commenting the one below, and then uncommenting one of your choosing
