--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -2,81 +2,96 @@ newmenu editing
 
 menuitem "Mapmodels..."				"showmenu Mapmodels"
 menuitem "Lighting..."				"showmenu lighting"
-menuitem "Entities"			        "showmenu entities"
-menuitem "Pickups"                              "showmenu pickups"
-menuitem "Arches and slopes.."                  "showmenu arches"
-menuitem "Map operations.."                     "showmenu mapop"
+menuitem "Entities..."			        "showmenu entities"
+menuitem "Pickups..."                           "showmenu pickups"
+menuitem "Arches and slopes..."                  "showmenu arches"
+menuitem "Map operations..."                     [ showmenu "Map operations" ]
 menuitem "Bots..."                              [ showmenu "Creating bot waypoints" ]
-menuitem "Help..."                              [ showmenu "Map editing help" ]
+menuitem "Help?"				[ echo "Please read the AssaultCube readme which has a detailed guide on mapediting. ]
 
 
-// Start of "editing help" menu.
-newmenu "Map editing help"
+//Lighting menu.
+newmenu "lighting"
 
-menuitem "Toggle: Edit mode					(Key: E)"	[ edittoggle; echo "Pressing E would be quicker." ]
-menuitem "Undo last cube manipulation				(Key: U)"	[ undo; echo "Pressing U would be quicker." ]
-menuitem "Copy selected cubes					(Key: C)"	[ copy; echo "Pressing C would be quicker." ]
-menuitem "Paste selected cubes					(Key: V)"	[ paste; echo "Selection has been pasted from the upper corner of the red dot. Pressing V would be quicker." ]
-menuitem "Repeat last texture replace"						"replace"
-menuitem "Delete closest light, mapmodel or other entity	(Key: Backspace)"	[ delent; echo "Pressing 'backspace' would be quicker." ]
-menuitem "Fullbright view"							"fullbright 1" 
-menuitem "Recalculate light"							"recalc"  
-menuitem "Toggle: Show geometric mipmaps			(Key: F5)"	"showmip"
-menuitem "Toggle: Occlusion culling				(Key: F6)"	"toggleocull"
+menuitem "Add white lights"		[ showmenu "White light" ]
+menuitem "Add coloured lights"	[ showmenu "Coloured light" ]
 menuitem """"
-menuitem "Show more..."								[ showmenu "Map editing help (Page 2)" ]
+menuitemcheckbox "Enable fullbright	"fullbright" [ if (= $arg1 1) [ fullbright 1 ] [ recalc ] ]
 
 
-newmenu "Map editing help (Page 2)"
+newmenu "White light"
 
-menuitem "Browse through floor textures				(Keys: Insert/Delete)"			[ showmenu "Browse floor textures" ]
-menuitem "Browse through wall textures				(Keys: Home/End)"		[ showmenu "Browse wall textures" ]
-menuitem "Browse through ceiling textures			(Keys: Pageup/Pagedown)"	[ showmenu "Browse ceiling textures" ]
-menuitem "Browse through upper wall textures			(Keys: Keypad7/Keypad4)"		[ showmenu "Browse upper wall textures" ]
-menuitem "Move floor geometery up				(Key: [ )"			[ editheight 0 -1; echo "Pressing the left-bracket would be quicker." ]
-menuitem "Move floor geometery down				(Key: ] )"			[ editheight 0 1; echo "Pressing right-bracket would be quicker." ]
-menuitem "Move ceiling geometery up				(Key: O)"			[ editheight 2 -1; echo "Pressing O would be quicker." ]
-menuitem "Move ceiling geometery down				(Key: P)"				[ editheight 2 1; echo "Pressing P would be quicker." ]
-menuitem "Make selected geometery SOLID			(Key: F)"				[ solid 1; echo "Pressing F would be quicker." ]
-menuitem "Make selected geometery SPACE			(Key: G)"				[ solid 0; echo "Pressing G would be quicker." ]
-menuitem "Make selected geometery a corner			(Key: K)"			[ corner; echo "Pressing K would be quicker." ]
-menuitem "Equalize the floor level				(Key: ,)"		[ equalize 0; echo "Pressing , would be quicker." ]
-menuitem "Equalize the ceiling level				(Key: .)"			[ equalize 2; echo "Pressing . would be quicker." ]
-menuitem "Make the floor a heightfield				(Key: H)"			[ heightfield 0; echo "Pressing H would be quicker." ]
-menuitem "Make the ceiling a heightfield				(Key: I)"		[ heightfield 2; echo "Pressing I would be quicker." ]
-menuitem "Manipulate the corners of a cube (upward)		(Key: 8)"				[ vdelta -1; echo "Pressing 8 would be quicker." ]
-menuitem "Manipulate the corners of a cube (downward)	(Key: 9)"				[ vdelta 1; echo "Pressing 9 would be quicker." ]
-menuitem """"
-menuitem "See the reference for more editing commands..."						"showmenu Editing"
+menuitemslider "Light radius: " 1 32 "($wradius)" 1 "" "wradius $arg1"
+menuitemslider "Brightness: " 1 255 "($wbright)" 3 "" "wbright $arg1"
+menuitem ""
+menuitem "		[ OK ]		" "newent light $wradius $wbright"
 
 
-newmenu "Browse floor textures"
+newmenu "Coloured light"
 
-menuitem "Browse floor textures forwards	(Key: Insert)"		[ edittex 0 1; echo "Pressing 'Ins' would be quicker." ]		
-menuitem "Browse floor textures backwards	(Key: Delete)"		[ edittex 0 -1; echo "Pressing 'Del' would be quicker." ]
+menuitemslider "Light radius: " 1 32 "($cradius)" 1 "" "wradius $arg1"
+menuitem ""
+menuitemslider "Red light: " 1 255 "($cred)" 3 "" "cred $arg1"
+menuitemslider "Green light: " 1 255 "($cgreen)" 3 "" "cgreen $arg1"
+menuitemslider "Blue light: " 1 255 "($cblue)" 3 "" "cblue $arg1"
+menuitem ""
+menuitem "		[ OK ]		" "newent light $wradius $cred $cgreen $cblue"
+
+//Entities menu
+newmenu entities
+
+menuitem "RVSF Spawn point"	"newent playerstart 1"
+menuitem "CLA Spawn point"	"newent playerstart 0"
+menuitem "FFA Spawn point"	"newent playerstart 100"
+menuitem ""
+menuitem "RVSF CTF Flag"	"newent ctf-flag 1"
+menuitem "CLA CTF Flag"		"newent ctf-flag 0"
+menuitem ""
+menuitem "Ladder entity"	"saycommand /newent ladder "
+
+//Pickups menu
+newmenu pickups
+
+menuitem "Health"		"newent health"
+menuitem "Pistol Magazine"	"newent clips"
+menuitem "Box of Ammo"		"newent ammobox"
+menuitem "Kevlar Vest"		"newent armour"
+menuitem "Akimbo"		"newent akimbo"
+menuitem "Grenades"		"newent grenades"
+
+//Arch and slope menu
+newmenu arches
+
+menuitem "Arch with no sideways curves"		"heightfield 2; arch 0"
+menuitem "Arch with sideways curves (delta 1)"	"heightfield 2; arch 1"
+menuitem "Arch with sideways curves (delta 2)"	"heightfield 2; arch 2"
+menuitem "Arch with sideways curves (delta 3)"	"heightfield 2; arch 3"
+menuitem "Arch with sideways curves (delta 4)"	"heightfield 2; arch 4"
+menuitem ""
+menuitem "Slope increase 2 left-right"		"heightfield 0; slope 2 0"
+menuitem "Slope decrease 2 left-right"		"heightfield 0; slope -2 0"
+menuitem "Slope increase 2 top-bottom"		"heightfield 0; slope 0 2"
+menuitem "Slope decrease 2 top-bottom"		"heightfield 0; slope 0 -2"
+menuitem "Slope increase 1 left-right"		"heightfield 0; slope 1 0"
+menuitem "Slope decrease 1 left-right"		"heightfield 0; slope -1 0"
+menuitem "Slope increase 1 top-bottom"		"heightfield 0; slope 0 1"
+menuitem "Slope decrease 1 top-bottom"		"heightfield 0; slope 0 -1"
+menuitem ""
+menuitem "Fix heightfielding"                    "solid 0; slope 0 0"
 
 
-newmenu "Browse wall textures"
+//Map operations
+newmenu "Map operations"
 
-menuitem "Browse wall textures forwards		(Key: Home)"	[ edittex 1 1; echo "Pressing 'Home' would be quicker." ]		
-menuitem "Browse wall textures backwards	(Key: End)"		[ edittex 1 -1; echo "Pressing 'End' would be quicker." ]
-
-
-newmenu "Browse ceiling textures"
-
-menuitem "Browse ceiling textures forwards	(Key: Pageup)"		[ edittex 2 1; echo "Pressing 'PgUp' would be quicker." ]		
-menuitem "Browse ceiling textures backwards	(Key: Pagedown)"		[ edittex 2 -1; echo "Pressing 'PgDn' would be quicker." ]
-
-
-newmenu "Browse upper wall textures"
-
-menuitem "Browse upper wall textures forwards		(Key: Keypad7)"		[ edittex 3 1; echo "Pressing '7' on the keypad would be quicker." ]
-menuitem "Browse upper wall textures backwards	(Key: Keypad4)"		[ edittex 3 -1; echo "Pressing '4' on the keypad would be quicker." ]		
+menuitem "Newmap (128x128 cubes - recommended)"	"newmap 7"
+menuitem "Newmap (256x256 cubes)"		"newmap 8"
+menuitem "Increase mapsize (2x)"		"mapenlarge"
+menuitem "Create a map message"			"saycommand /mapmsg "
+menuitem "Change waterlevel"			"saycommand /waterlevel "
+menuitem "Change watercolour"			"saycommand /watercolour "
 
 
-// End of "editing help" menu.
-
-
+//Mapmodels
 newmenu Mapmodels
 
 menuitem "Platforms/Clips"	"showmenu Platforms/Clips"
@@ -122,6 +137,7 @@ menuitem "Plasma TV"		"newent mapmodel 72"
 menuitem "Power meter"		"newent mapmodel 74"
 menuitem "Rack"			"newent mapmodel 75"
 menuitem "Utility table"	"newent mapmodel 87"
+menuitem "Ceiling fan"		"saycommand /newent mapmodel 113"
 
 newmenu Military
 
@@ -232,6 +248,7 @@ menuitem "No smoking"		"saycommand /newent mapmodel 97"
 menuitem "Radioactive"		"saycommand /newent mapmodel 98"
 menuitem "Restricted area"	"saycommand /newent mapmodel 99"
 menuitem "Arab"			"saycommand /newent mapmodel 111"
+menuitem "Wanted Poster"        "saycommand /newent mapmodel 55"
 
 newmenu Other
 
@@ -242,79 +259,4 @@ menuitem "Broken Wood"     	"newent mapmodel 51"
 menuitem "Coffee"               "newent mapmodel 53"
 menuitem "Flyer"                "newent mapmodel 54"
 menuitem "Tree Flyer"     	"newent mapmodel 26"
-menuitem "Wanted Poster"        "saycommand /newent mapmodel 55"
 menuitem "Potato box"		"newent mapmodel 56"
-
-newmenu entities
-
-menuitem "RVSF Spawn point"	"newent playerstart 1"
-menuitem "CLA Spawn point"	"newent playerstart 0"
-menuitem "FFA Spawn point"	"newent playerstart 100"
-menuitem "RVSF CTF Flag"	"newent ctf-flag 1"
-menuitem "CLA CTF Flag"		"newent ctf-flag 0"
-menuitem "Ladder entity"	"saycommand /newent ladder "
-
-newmenu pickups
-
-menuitem "Health"		"newent health"
-menuitem "Pistol Magazine"	"newent clips"
-menuitem "Box of Ammo"		"newent ammobox"
-menuitem "Kevlar Vest"		"newent armour"
-menuitem "Akimbo"		"newent akimbo"
-menuitem "Grenades"		"newent grenades"
-
-newmenu arches
-
-menuitem "normal arch"                        "heightfield 2; arch 0"
-menuitem "arch with sideways curve (delta 1)" "heightfield 2; arch 1"
-menuitem "arch with sideways curve (delta 2)" "heightfield 2; arch 2"
-menuitem "arch with sideways curve (delta 3)" "heightfield 2; arch 3"
-menuitem "arch with sideways curve (delta 4)" "heightfield 2; arch 4"
-menuitem "slope increase 2 left-right"        "heightfield 0; slope 2 0"
-menuitem "slope decrease 2 left-right"        "heightfield 0; slope -2 0"
-menuitem "slope increase 2 top-bottom"        "heightfield 0; slope 0 2"
-menuitem "slope decrease 2 top-bottom"        "heightfield 0; slope 0 -2"
-menuitem "slope increase 1 left-right"        "heightfield 0; slope 1 0"
-menuitem "slope decrease 1 left-right"        "heightfield 0; slope -1 0"
-menuitem "slope increase 1 top-bottom"        "heightfield 0; slope 0 1"
-menuitem "slope decrease 1 top-bottom"        "heightfield 0; slope 0 -1"
-menuitem "fix heightfield"                    "slope 0 0"
-menuitem "[ arches make ceiling heighfield, slopes floor ]"
-
-
-newmenu mapop
-
-menuitem "Newmap (128x128 cubes, recommended)" "newmap 7"
-menuitem "Newmap (256x256 cubes)"               "newmap 8"
-menuitem "Increase mapsize (2x)"              "mapenlarge"
-menuitem "Create a map message"               "saycommand /mapmsg "
-
-
-// Main lighting menu.
-
-newmenu "lighting"
-
-menuitem "Add white lights"		[ showmenu "White light" ]
-menuitem "Add coloured lights"	[ showmenu "Coloured light" ]
-menuitem """"
-menuitemcheckbox "Enable fullbright	"fullbright" [ if (= $arg1 1) [ fullbright 1 ] [ recalc ] ]
-
-
-newmenu "White light"
-
-menuitemslider "Light radius: " 1 32 "($wradius)" 1 "" "wradius $arg1"
-menuitemslider "Brightness: " 1 255 "($wbright)" 3 "" "wbright $arg1"
-menuitem ""
-menuitem "		[ OK ]		" "newent light $wradius $wbright"
-
-
-newmenu "Coloured light"
-
-menuitemslider "Light radius: " 1 32 "($cradius)" 1 "" "wradius $arg1"
-menuitem ""
-menuitemslider "Red light: " 1 255 "($cred)" 3 "" "cred $arg1"
-menuitemslider "Green light: " 1 255 "($cgreen)" 3 "" "cgreen $arg1"
-menuitemslider "Blue light: " 1 255 "($cblue)" 3 "" "cblue $arg1"
-menuitem ""
-menuitem "		[ OK ]		" "newent light $wradius $cred $cgreen $cblue"
-
