--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -18,20 +18,26 @@ alias startbotmatch [
 	]
 ]
 
+alias preparebotmatch [
+    echo starting botmatch..
+    
+    // register event that is fired during mapload
+    alias mapstartonce [ 
+        kickallbots
+        startbotmatch // add bots
+    ]
+    
+	mode $tmp_mode
+    map $tmp_botmap
+]
+
 // register events and change map
 alias startbotmap [
-	if $connected [ disconnect ] // async
-	sleep 1000 [ 
-	    echo starting botmatch..
-	    
-	    // register event that is fired during mapload
-	    alias mapstartonce [ 
-	        kickallbots
-	        startbotmatch // add bots
-	    ]
-	    
-		mode $tmp_mode
-	    map $tmp_botmap
+	if $connected [
+	    alias mapstartonce [ preparebotmatch ]
+	    disconnect
+	] [
+        preparebotmatch
     ]
 ]
 
