--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -27,7 +27,8 @@ alias genmapitems [
 ]
 newmenu maps
 // Add maps to the below list to include them in the CTF map menu.
-genmapitems	"ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
+alias defaultmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
+genmapitems	$defaultmaps
 menuitem	""""
 menuitem	"Show all maps..." [ showmenu "all maps" ]
 
@@ -38,7 +39,8 @@ menudirlist "packages/maps" "cgz" "map $arg1"
 
 newmenu maps_flags 
 // Add maps to the below list to include them in the CTF, KTF & TKTF map menu. Maps should contain flags here.
-genmapitems "ac_depot ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
+alias ctfmaps "ac_depot ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
+genmapitems $ctfmaps
 menuitem """"
 menuitem "Show all maps.." [showmenu "all maps"]
 
@@ -52,7 +54,8 @@ alias genbotmaps [
 	]
 ]
 // Add maps to the below list to include them in the bot map menu.
-genbotmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
+alias botmaps $defaultmaps
+genbotmaps $botmaps
 
 
 
