--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -42,7 +42,7 @@ alias startbotmap [
 ]
 
 
-alias emptymap [ if $connected [ disconnect; sleep 1000 [ emptymap2 ] ] [ emptymap2 ] ]
+alias emptymap [ if $connected [ disconnect; alias mapstartonce [ emptymap2 ] ] [ emptymap2 ] ]
 alias emptymap2 [
 	mode 0
 	showmenu maps ]
