--- a/ac/packages/maps/ac_desert3.cfg
+++ b/ac/packages/maps/ac_desert3.cfg
@@ -68,6 +68,7 @@ mapmodel 0  0 0 0 "sail"           //57
 mapmodel 0  0 0 0 "signs/arab"     //58 
 mapmodel 1 3 0 0 "toca/trashcan"   //59
 mapmodel 0 1 0 0 "ladder_rung"
+mapmodel 4  1 0 0 "bridge_shine"
 
 texturereset
 
@@ -360,3 +361,5 @@ texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"           //241
 texture 0 "./makke/brickwall.jpg"
+
+texture 0 "dog/texture08.jpg"
