--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -101,7 +101,7 @@ mapmodel 1 4 0 0 "toca/guardrail2"		// 68  	Use guardrail2 with this (Model 106)
 mapmodel 0 0 0 0 "toca/milkcarton"		// 69
 mapmodel 0 0 0 0 "toca/monitor"			// 70
 mapmodel 2 3 0 0 "toca/officedesk"		// 71  	Clip this with nothing mapmodels
-mapmodel 0 5 0 0 "toca/plasmatv"		// 72 	Clip this with nothing mapmodels
+mapmodel 0 0 0 0 "toca/plasmatv"		// 72
 mapmodel 4 1 0 0 "toca/platformmet"		// 73
 mapmodel 0 6 0 0 "toca/powermeter"		// 74
 mapmodel 1 6 0 0 "toca/rack"			// 75 	Clip this with nothing mapmodels
@@ -163,6 +163,7 @@ mapmodel 0 0 0 0 "toca/ceilingfan"		// 113
 // mapmodel 3 1 0 0 "toca/grid6x8"		// A metal mesh, specifically designed for ac_aqueous.
 // mapmodel 0 0 0 0 "toca/stairs_aqueous/stairsacc/beam"
 						// Metal beam to support toca's stairs. Made for ac_aqueous (not used).
+						// This model is very difficult to place correctly!
 // mapmodel 0 0 0 0 "toca/stairs_aqueous/stairsacc/handrail"
 						// Handrail for toca's metal platforms. Specific to ac_aqueous.
 // mapmodel 3 1 7 0 "toca/stairs_aqueous/stairs1"
@@ -538,14 +539,14 @@ texture 0 "./drunkenM/rock_wall1.jpg"			// Texture #249
 // texture 0 "./wotwot/urban/manhole1.jpg"
 // texture 0 "./makke/door_metal.jpg"
 // texture 0 "./makke/door_rust.jpg"
-// texture 0 "./wotwot/urban/cableshelf1_l_hor.jpg" 
-// texture 0 "./wotwot/urban/cableshelf1_s_ver.jpg" 
-// texture 0 "./wotwot/urban/cableshelf1_m_ver.jpg" 
-// texture 0 "./wotwot/urban/cableshelf1_l_ver.jpg" 
-// texture 0 "./wotwot/urban/electric4.jpg"  
+// texture 0 "./wotwot/urban/cableshelf1_l_hor.jpg"
+// texture 0 "./wotwot/urban/cableshelf1_s_ver.jpg"
+// texture 0 "./wotwot/urban/cableshelf1_m_ver.jpg"
+// texture 0 "./wotwot/urban/cableshelf1_l_ver.jpg"
+// texture 0 "./wotwot/urban/electric4.jpg"
 // texture 0 "./wotwot/urban/electric4_bla.jpg"
-// texture 0 "./wotwot/urban/electric3.jpg"  
+// texture 0 "./wotwot/urban/electric3.jpg"
 // texture 0 "./wotwot/urban/electric3_bla.jpg"
-// texture 0 "./wotwot/urban/electric1.jpg"  
+// texture 0 "./wotwot/urban/electric1.jpg"
 // texture 0 "./wotwot/urban/electric1_bla.jpg"
 // texture 0 "./openfootage/stonewall_4.jpg"
