--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -243,7 +243,7 @@ menuitemslider "Water subdivision: " 0 4 "(findlist $watersubdiv_valuemap $water
 menuitemcheckbox "Water reflection: " "$waterreflect" "waterreflect $arg1"
 
 getshadowq = [
-    if (&& $stencilshadow $stencilbits) [result 2] [
+    if (&& $stencilshadow (>= $stencilbits 8)) [result 2] [
         if $dynshadow [result 1] [result 0]
     ]
 ]
@@ -266,8 +266,7 @@ setshadowq = [
     ]
 ]
 
-menuitemcheckbox "Dynamic light: " "$dynlight" [ if (= $arg1 1) [ dynlight 16 ] [ dynlight 0 ] ]
-menuitemslider "Dynamic player shadows: " 0 2 [getshadowq] 1 ["off" "blob" "stencil"] [setshadowq $arg1]
+menuitemslider "Dynamic shadows: " 0 2 [getshadowq] 1 ["off" "blob" "stencil"] [setshadowq $arg1]
 menuitemcheckbox "High process priority: " "$highprocesspriority" "highprocesspriority $arg1"
 
 menuitem "FPS range.." "showmenu fpsrange"
