--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -16,7 +16,7 @@ newmenu "lighting"
 menuitem "Add white lights"		[ showmenu "White light" ]
 menuitem "Add coloured lights"	[ showmenu "Coloured light" ]
 menuitem """"
-menuitemcheckbox "Enable fullbright	"fullbright" [ if (= $arg1 1) [ fullbright 1 ] [ recalc ] ]
+menuitemcheckbox "Enable fullbright: " "$fullbright" [ fullbright $arg1 ]
 
 
 newmenu "White light"
