added dynlight checkbox
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2685 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -82,7 +82,7 @@ alias new_gfx_quality [
         minlod 200
         fpsrange 100 1000
         watersubdiv 2
-        dynlight 16
+        dynlight 1
         waterreflect 1
         stencilbits 8
         dynshadow 40
@@ -98,7 +98,7 @@ alias new_gfx_quality [
             minlod 100
             fpsrange 60 60
             watersubdiv 2
-            dynlight 16
+            dynlight 1
             waterreflect 1
             stencilbits 8
             dynshadow 40
@@ -114,7 +114,7 @@ alias new_gfx_quality [
                 minlod 60
                 fpsrange 30 40
                 watersubdiv 4
-                dynlight 16
+                dynlight 1
                 if (glext "GL_ARB_fragment_program") [
                     // make sure the 3D card is powerful enough for this
                     waterreflect 1
@@ -266,6 +266,7 @@ setshadowq = [
     ]
 ]
 
+menuitemcheckbox "Dynamic lights: " "$dynlight" [dynlight $arg1]
 menuitemslider "Dynamic shadows: " 0 2 [getshadowq] 1 ["off" "blob" "stencil"] [setshadowq $arg1]
 menuitemcheckbox "High process priority: " "$highprocesspriority" "highprocesspriority $arg1"
 
