A lighting menu that works :)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2699 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -1,44 +1,44 @@
 newmenu editing
 
 menuitem "Mapmodels..."				"showmenu Mapmodels"
-menuitem "Lighting..."				"showmenu lighting"
-menuitem "Entities..."			        "showmenu entities"
-menuitem "Pickups..."                           "showmenu pickups"
-menuitem "Arches and slopes..."                  "showmenu arches"
-menuitem "Map operations..."                     [ showmenu "Map operations" ]
-menuitem "Bots..."                              [ showmenu "Creating bot waypoints" ]
+menuitem "Lighting..."				"showmenu Lighting"
+menuitem "Entities..."				"showmenu Entities"
+menuitem "Pickups..."				"showmenu Pickups"
+menuitem "Arches and slopes..."			"showmenu Arches"
+menuitem "Map operations..."			[ showmenu "Map operations" ]
+menuitem "Bots..."				[ showmenu "Creating bot waypoints" ]
 menuitem "Help?"				[ echo "Please read the AssaultCube readme which has a detailed guide on mapediting. ]
 
 
 //Lighting menu.
-newmenu "lighting"
+newmenu "Lighting"
 
-menuitem "Add white lights"		[ showmenu "White light" ]
-menuitem "Add coloured lights"	[ showmenu "Coloured light" ]
+menuitem "Add white lights	"		[ showmenu "White light" ]
+menuitem "Add coloured lights	"		[ showmenu "Coloured light" ]
 menuitem """"
-menuitemcheckbox "Enable fullbright: " "$fullbright" [ fullbright $arg1 ]
+menuitemcheckbox "Enable fullbright: 	" "$fullbright" [ fullbright $arg1 ]
 
 
 newmenu "White light"
 
-menuitemslider "Light radius: " 1 32 "($wradius)" 1 "" "wradius $arg1"
-menuitemslider "Brightness: " 1 255 "($wbright)" 3 "" "wbright $arg1"
+menuitemslider "Light radius: " 1 32 " " 1 "" "alias wlight $arg1"
+menuitemslider "Brightness: " 1 255 " " 5 "" "alias wlight1 $arg1"
 menuitem ""
-menuitem "		[ OK ]		" "newent light $wradius $wbright"
+menuitem "		[ OK ]		" "newent light $wlight $wlight1"
 
 
 newmenu "Coloured light"
 
-menuitemslider "Light radius: " 1 32 "($cradius)" 1 "" "wradius $arg1"
+menuitemslider "Light radius: " 1 32 " " 1 "" "alias clight $arg1"
 menuitem ""
-menuitemslider "Red light: " 1 255 "($cred)" 3 "" "cred $arg1"
-menuitemslider "Green light: " 1 255 "($cgreen)" 3 "" "cgreen $arg1"
-menuitemslider "Blue light: " 1 255 "($cblue)" 3 "" "cblue $arg1"
+menuitemslider "Red light: " 1 255 " " 5 "" "alias clight1 $arg1"
+menuitemslider "Green light: " 1 255 " " 5 "" "alias clight2 $arg1"
+menuitemslider "Blue light: " 1 255 " " 5 "" "alias clight3 $arg1"
 menuitem ""
-menuitem "		[ OK ]		" "newent light $wradius $cred $cgreen $cblue"
+menuitem "		[ OK ]		" "newent light $clight $clight1 $clight2 $clight3"
 
 //Entities menu
-newmenu entities
+newmenu Entities
 
 menuitem "RVSF Spawn point"	"newent playerstart 1"
 menuitem "CLA Spawn point"	"newent playerstart 0"
@@ -50,7 +50,7 @@ menuitem ""
 menuitem "Ladder entity"	"saycommand /newent ladder "
 
 //Pickups menu
-newmenu pickups
+newmenu Pickups
 
 menuitem "Health"		"newent health"
 menuitem "Pistol Magazine"	"newent clips"
@@ -60,7 +60,7 @@ menuitem "Akimbo"		"newent akimbo"
 menuitem "Grenades"		"newent grenades"
 
 //Arch and slope menu
-newmenu arches
+newmenu Arches
 
 menuitem "Arch with no sideways curves"		"heightfield 2; arch 0"
 menuitem "Arch with sideways curves (delta 1)"	"heightfield 2; arch 1"
