--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -63,7 +63,7 @@ bind H "heightfield 0"
 bind I "heightfield 2"
 bind J ""
 bind K "corner"
-bind L [ if $editing [ showmenu lighting ] ]
+bind L [ if $editing [ showmenu Lighting ] ]
 bind M ""
 bind N ""
 bind O "editheight 2 -1"
