game mode description line
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2702 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -169,3 +169,10 @@ exec config/menus_bot.cfg
 exec config/menus_edit.cfg
 exec config/menus_settings.cfg
 exec config/menus_multiplayer.cfg
+
+// game mode descriptions
+gamemodedesc 5 [CTF: Steal the enemy flag and bring it to your home base. Don't let your own flag get stolen.]
+gamemodedesc 13 [HTF: Find the enemy flag, frag the flag bearer and collect the flag to score. Protect your own team flag.]
+gamemodedesc 14 [TKTF: There is only one flag. Get the flag and keep it. You score one point every 15 seconds. If your teammate has the flag, protect him.]
+gamemodedesc 15 [KTF: Get the flag and keep it. You score one point every 15 seconds. You are alone. Everybody else will try to frag you.]
+
