Experimented with different shadow yaws in maps to help rectify some shadow issues. Still to try: shine, snow, sunset, toxic, urban.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2730 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_complex.cfg
+++ b/ac/packages/maps/ac_complex.cfg
@@ -1,10 +1,11 @@
 loadsky "textures/skymaps/makke/mountain"
 fog 500
 fogcolour 0x968070
-mapmodelreset						
-mapmodel 0 0 0 0 "nothing"         
-mapmodel 0 0 0 0 "nothing"         
-mapmodel 0 0 0 0 "nothing"         
+shadowyaw 120
+mapmodelreset
+mapmodel 0 0 0 0 "nothing"
+mapmodel 0 0 0 0 "nothing"
+mapmodel 0 0 0 0 "nothing"
 mapmodel 4  1 0 0 "comp_bridge"
 mapmodel 0 10 0 0 "ladder_10x"
 mapmodel 1  3 0 0 "barrel"
@@ -22,7 +23,7 @@ mapmodel 1 2 0 0 "chair1"
 mapmodel 0 0 0 0 "coffeemug"
 mapmodel 0 0 0 0 "light01"
 mapmodel 0 0 0 0 "picture1"
-mapmodel 0 0 0 0 "gastank"   //see mapmodels/gastank/usage.txt
+mapmodel 0 0 0 0 "gastank"
 mapmodel 2 4 0 0 "dumpster"
 mapmodel 0 12 0 0 "streetlamp"
 mapmodel 0 0 0 0 "wood01"
