--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -1,6 +1,7 @@
 mapmodelreset // start @ zero
 fogcolour 0x9F8255
 fog 300
+shadowyaw 175
 
 mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
 //                                     models that can´t be clipped properly otherwise
