--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -26,7 +26,7 @@ alias genmapitems [
     ]
 ]
 newmenu maps
-// Add maps to the below list to include them in the CTF map menu.
+// Add maps to the below list to include them in the normal map menu (also for botmaps).
 alias defaultmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 genmapitems	$defaultmaps
 menuitem	""""
@@ -43,20 +43,6 @@ alias ctfmaps "ac_depot ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_s
 genmapitems $ctfmaps
 menuitem """"
 menuitem "Show all maps.." [showmenu "all maps"]
-
-newmenu botmaps
-
-alias genbotmaps [
-	loop i (listlen $arg1) [
-		alias listmapname (at $arg1 $i)
-		alias menutext $listmapname (concat map $listmapname)
-		menuitem $menutext (concat "alias tmp_botmap" $listmapname "; startbotmap")
-	]
-]
-// Add maps to the below list to include them in the bot map menu.
-alias botmaps $defaultmaps
-genbotmaps $botmaps
-
 
 
 newmenu demo
