--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -1,5 +1,16 @@
 // bot menus and tools
 
+newmenu botmaps
+
+alias genbotmaps [
+	loop i (listlen $arg1) [
+		alias listmapname (at $arg1 $i)
+		alias menutext $listmapname (concat map $listmapname)
+		menuitem $menutext (concat "alias tmp_botmap" $listmapname "; startbotmap")
+	]
+]
+genbotmaps $defaultmaps
+
 alias tmp_botskill good
 alias tmp_numbots 1
 alias tmp_mode
@@ -127,7 +138,7 @@ menuitem "Set waypoint as jumpable"		"setjumpwp"
 menuitem "Unset waypoint as jumpable"		"unsetjumpwp"
 menuitem "Set waypoint direction (yaw)"		"setwpyaw"
 menuitem """"
-menuitemslider "Waypoint visibility: " 0 1 "($wpvisible)" 1 ["Hide waypoints" "Show waypoints"] "wpvisible $arg1"
+menuitemslider "Waypoint visibility: " 0 1 " " 1 ["Hide waypoints" "Show waypoints"] "wpvisible $arg1"
 menuitemslider "Select/place waypoints by: " 0 1 "($xhairwpsel)" 1 ["Your current location" "Clicking a point on the grid"] "xhairwpsel $arg1"
 
 
