Shadow yaw optimisations on map-by-map basis ac_shine map fixes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2736 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_scaffold.cfg
+++ b/ac/packages/maps/ac_scaffold.cfg
@@ -9,6 +9,7 @@
 
 mapmodelreset // start @ zero
 
+shadowyaw 145
 fog 210
 
 mapmodel 1 25 0 0 "nothing"    //0 alter the values in your map.cfg and use to clip 
