--- a/ac/packages/maps/ac_snow.cfg
+++ b/ac/packages/maps/ac_snow.cfg
@@ -7,6 +7,8 @@
 // DIFFRENT SO UPON 2ND LOAD YOUR MAP
 // WOULD BE SCREWED UP...
 
+
+shadowyaw 180
 mapmodelreset // start @ zero
 
 mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
