--- a/ac/packages/maps/ac_toxic.cfg
+++ b/ac/packages/maps/ac_toxic.cfg
@@ -10,7 +10,7 @@
 
 // Comments with "@" just after the comment, are comment's by RandumIdiot
 
-	
+shadowyaw 165
 fog 1024				// @ Next to no fog. Makes everything look much nicer ;)
 mapmodelreset // start @ zero
 
