added: server cluster model's rack, U3  and U6 items
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2747 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -164,9 +164,15 @@ mapmodel 1 1 0 0  "toca/pipes/metalpipe2"	//123
 mapmodel 1 1 0 0  "toca/ceilingfan"		//124
 mapmodel 0 20 0 0  "toca/pine"			//125
 
+mapmodel 2 7 0 0  "toca/servercluster/rack"	//126
 
+mapmodel 2 1 0 0  "toca/servercluster/U3_1"	//127 U3 = 1 cube high
+mapmodel 2 1 0 0  "toca/servercluster/U3_2"	//128
+mapmodel 2 1 0 0  "toca/servercluster/U3_3"	//129
 
-
+mapmodel 2 1 0 0  "toca/servercluster/U6_1"	//130 U6 = 2 cubes high
+mapmodel 2 1 0 0  "toca/servercluster/U6_2"	//131
+mapmodel 2 1 0 0  "toca/servercluster/U6_3"	//132
 
 
 
