added: experimental small backdrop models
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2757 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -144,40 +144,32 @@ mapmodel 2 2 0 0 "toca/airconditioner/interior"	//111
 
 mapmodel 0 0 0 0 "toca/stairsacc/handrail"	//112
 mapmodel 0 0 0 0 "toca/stairsacc/beam"		//113
-mapmodel 0 0 0 0  "toca/smallpalm"		//114 alpha channel test plant #1
-
+mapmodel 0 0 0 0  "toca/smallpalm"		//114
 mapmodel 1 12 0 0 "toca/tree1"			//115 tree prototype
-
-
-//mapmodel 0 0 0 0  "toca/grass1"		//116 cross model for grass or plants
-mapmodel 0 0 0 0 "toca/bush1"			//116 alpha channel test plant #2
-
+mapmodel 0 0 0 0 "toca/bush1"			//116
 mapmodel 1 12 0 0 "toca/palmtree1"		//117
 mapmodel 1 1 0 0  "toca/milkcrate"		//118
-
 mapmodel 1 12 0 0 "toca/tree2"			//119 second tree prototype
-
 mapmodel 1 1 0 0  "toca/pipes/concretepipe"	//120
 mapmodel 3 1 0 0  "toca/grid6x8"		//121
 mapmodel 1 1 0 0  "toca/pipes/metalpipe"	//122
 mapmodel 1 1 0 0  "toca/pipes/metalpipe2"	//123
 mapmodel 1 1 0 0  "toca/ceilingfan"		//124
 mapmodel 0 20 0 0  "toca/pine"			//125
-
 mapmodel 2 7 0 0  "toca/servercluster/rack"	//126
-
 mapmodel 2 1 0 0  "toca/servercluster/U3_1"	//127 U3 = 1 cube high
 mapmodel 2 1 0 0  "toca/servercluster/U3_2"	//128
 mapmodel 2 1 0 0  "toca/servercluster/U3_3"	//129
-
 mapmodel 2 1 0 0  "toca/servercluster/U6_1"	//130 U6 = 2 cubes high
 mapmodel 2 1 0 0  "toca/servercluster/U6_2"	//131
 mapmodel 2 1 0 0  "toca/servercluster/U6_3"	//132
 
+mapmodel 0 0 0 0  "toca/backdrop1"		//133
+mapmodel 0 0 0 0  "toca/backdrop2"		//134
 
 
-//loadsky "textures/toca/skybox1/skybox1"
-//loadsky "textures/toca/skybox2/skybox2"
+
+
 
 
 // skybox for this map - check /packages/skymaps/
@@ -202,8 +194,9 @@ texture 0 "kurt/klite1.jpg" //dummy
 
 //-------------water-uncomment all but one!------
 
-texture 0 "./noctua/water/water01.jpg"
-//texture 0 "./noctua/water/water04.jpg"
+
+//texture 0 "./noctua/water/water01.jpg"
+texture 0 "./noctua/water/water04.jpg"
 //texture 0 "./noctua/water/water05.jpg"
 //texture 0 "./makke/muddywater.jpg"
 //texture 0 "./noctua/water/snow01.jpg"
