added 3rd backdrop
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2760 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -166,6 +166,7 @@ mapmodel 2 1 0 0  "toca/servercluster/U6_3"	//132
 
 mapmodel 0 0 0 0  "toca/backdrop1"		//133
 mapmodel 0 0 0 0  "toca/backdrop2"		//134
+mapmodel 0 0 0 0  "toca/backdrop3"		//135
 
 
 
