window1 re-upload
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2766 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -168,6 +168,8 @@ mapmodel 0 0 0 0  "toca/backdrop1"		//133
 mapmodel 0 0 0 0  "toca/backdrop2"		//134
 mapmodel 0 0 0 0  "toca/backdrop3"		//135
 
+mapmodel 0 0 0 0  "toca/window1"		//136
+
 
 
 
