--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -222,7 +222,7 @@ loadnotexture 				// Reset to default alternative texture. Comment this if you w
 
 // Textures:
 texturereset    		// Leave this command here, or else your map will look messed up!
-texture 0 "kurt/klite1.jpg"	// Dummy texture - Also leave this here, or else your map will look messed up!
+texture 0 "./kurt/klite1.jpg"	// Dummy texture - Also leave this here, or else your map will look messed up!
 
 
 							// Brickwall textures
